# ember

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_ext.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-ember-api.yml  publish-ember-cache.yml  publish-emberloop.yml  publish.yml
docs/: contributing.md  index.md  package-lock.json  package.json  roadmap.md
docs/.vitepress/: config.ts
docs/api/: ai.md  application.md  caching.md  middleware.md  request-response.md  routing.md  sse.md
docs/guide/: cli.md  concepts.md  deployment.md  getting-started.md  performance.md  structure.md
docs/tutorial/: 01-hello-world.md  02-routing.md  03-request-response.md  04-middleware.md  05-blueprints.md  06-caching.md  07-ai-routes.md
ember/: __init__.py  application.py  constants.py  hooks.py  limits.py  server.py
ember/ai/: __init__.py  cache.py  context.py
ember/ai/ratelimit/: token_bucket.pxd  token_bucket.py
ember/ai/sse/: __init__.py  response.py  sse_writer.py  (+1 more)
ember/cache/: __init__.py  backends.py  lru.py
ember/cli/: commands.py
ember/components/: container.py
ember/eventloop/: __init__.py  uring.pxd  uring.pyx
ember/headers/: headers.pyx
ember/middleware/: __init__.py  cors.py
ember/protocol/: cprotocol.pyx  protocol.py
ember/request/: request.pyx
ember/response/: __init__.py  response.pxd  response.py  response.pyx
ember/router/: __init__.py  parser.py  router.pxd  router.py  router.pyx
ember/sessions/: __init__.py  memory.py
ember/workers/: handler.py
examples/: basic_api.py  streaming_chat.py  tool_calling.py
taskbench/: ember_hello.py  run_benchmarks.sh  seed_db.py
taskbench/ai_bench/: _model.py  bench.js  ember_app.py  fastapi_app.py
taskbench/ember_app/: hello.py  main.py  main_tuned.py
taskbench/express_app/: hello.js  package-lock.json  package.json  server.js
taskbench/fastapi_app/: main.py  requirements.txt
taskbench/hello_bench/: README.md  bench_all.sh  bench_one.sh  bench_pinned.sh  k6_hello.js
taskbench/k6/: bench_ember.js  bench_express.js  bench_fastapi.js  bench_hello.js  compare_all.js
taskbench/results/: compare_all_summary.txt  summary.json
tests/: test_request.py  test_responses.py
(+20 files in other folders)
