[project]
name = "ember-monorepo"
version = "0"
description = "Workspace root — see packages/ember-api, packages/ember-cache, packages/emberloop"
requires-python = ">=3.12"
dependencies = [
    "emberloop",
    "ember-cache",
    "ember-api",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "cython>=3.0",
    "setuptools>=68",
    "wheel",
    "build",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
emberloop    = { workspace = true }
ember-cache  = { workspace = true }
ember-api    = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["packages/emberloop/tests", "packages/ember-cache/tests", "packages/ember-api/tests"]
